libs/ui/flake/kis_shape_layer_canvas.cpp
@@ -41,6 +41,9 @@
 #include <QThread>
 #include <QApplication>
 
+#include <kis_spontaneous_job.h>
+#include "kis_image.h"
+
 //#define DEBUG_REPAINT
 
 KisShapeLayerCanvas::KisShapeLayerCanvas(KisShapeLayer *parent, KisImageWSP image)
@@ -51,6 +54,7 @@ KisShapeLayerCanvas::KisShapeLayerCanvas(KisShapeLayer *parent, KisImageWSP imag
         , m_selectedShapesProxy(new KoSelectedShapesProxySimple(m_shapeManager.data()))
         , m_projection(0)
         , m_parentLayer(parent)
+        , m_image(image)
 {
     m_shapeManager->selection()->setActiveLayer(parent);
     connect(this, SIGNAL(forwardRepaint()), SLOT(repaint()), Qt::QueuedConnection);
@@ -102,6 +106,32 @@ KoSelectedShapesProxy *KisShapeLayerCanvas::selectedShapesProxy() const
 # include <stdlib.h>
 #endif
 
+
+class KisRepaintShapeLayerLayerJob : public KisSpontaneousJob
+{
+public:
+    KisRepaintShapeLayerLayerJob(KisShapeLayerSP layer) : m_layer(layer) {}
+
+    bool overrides(const KisSpontaneousJob *_otherJob) override {
+        const KisRepaintShapeLayerLayerJob *otherJob =
+            dynamic_cast<const KisRepaintShapeLayerLayerJob*>(_otherJob);
+
+        return otherJob && otherJob->m_layer == m_layer;
+    }
+
+    void run() override {
+        m_layer->forceUpdateTimedNode();
+    }
+
+    int levelOfDetail() const override {
+        return 0;
+    }
+
+private:
+    KisShapeLayerSP m_layer;
+};
+
+
 void KisShapeLayerCanvas::updateCanvas(const QRectF& rc)
 {
     dbgUI << "KisShapeLayerCanvas::updateCanvas()" << rc;
@@ -120,11 +150,34 @@ void KisShapeLayerCanvas::updateCanvas(const QRectF& rc)
         m_viewConverter->zoom(&x, &y);
     }
 
-    emit forwardRepaint();
+    /**
+     * HACK ALERT!
+     *
+     * The shapes may be accessed from both, GUI and worker threads! And we have no real
+     * guard against this until the vector tools will be ported to the strokes framework.
+     *
+     * Here we just avoid the most obvious conflict of threads:
+     *
+     * 1) If the layer if modified by a non-gui (worker) thread, use a spontaneous jobs
+     *    to rerender the canvas. The job will be executed (almost) exclusively and it is
+     *    the responsibility of the worker thread to add a barrier to wait until this job is
+     *    completed, and not try to access the shapes concurrently.
+     *
+     * 2) If the layer is modified by a gui thread, it means that we are being accessed by
+     *    a legacy vector tool. It this case just emit a queued signal to make sure the updates
+     *    are compressed a little bit (TODO: add a compressor?)
+     */
+
+    if (qApp->thread() == QThread::currentThread()) {
+        emit forwardRepaint();
+    } else {
+        m_image->addSpontaneousJob(new KisRepaintShapeLayerLayerJob(m_parentLayer));
+    }
 }
 
 void KisShapeLayerCanvas::repaint()
 {
+
     QRect r;
 
     {
@@ -189,7 +242,15 @@ KoUnit KisShapeLayerCanvas::unit() const
 
 void KisShapeLayerCanvas::forceRepaint()
 {
-    KIS_SAFE_ASSERT_RECOVER_RETURN(qApp->thread() == QThread::currentThread());
+    /**
+     * WARNING! Although forceRepaint() may be called from different threads, it is
+     * not entirely safe. If the user plays with shapes at the same time (vector tools are
+     * not ported to strokes yet), the shapes my be accessed from two different places at
+     * the same time, which will cause a crash.
+     *
+     * The only real solution to this is to port vector tools to strokes framework.
+     */
+
     repaint();
 }
 
