libs/ui/flake/kis_shape_layer_canvas.h
@@ -86,6 +86,8 @@ private:
 
     QRegion m_dirtyRegion;
     QMutex m_dirtyRegionMutex;
+
+    KisImageSP m_image;
 };
 
 #endif
